--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,18 +15,16 @@ en:
       short:
         "%B %d"
 
-  errors:
-    attributes:
-      game:
-        over: "is finished"
-        missing: "cannot be found"
-      card:
-        not_in_discard: "is not in the discard pile"
-        not_in_hand: "is not in any player's hand"
-        not_installed: "is not installed on any player's board"
-        not_in_deck: "is not in the deck"
-      deck:
-        empty: "is empty"
+  activemodel:
+    errors:
+      models:
+        card_movement:
+          attributes:
+            source:
+              not_in_discard: "is not in the discard pile"
+              not_in_hand: "is not in any player's hand"
+              not_installed: "is not installed on any player's board"
+              not_in_deck: "is not in the deck"
 
   games:
     index:
