Pilfer through the discard
Expose the ability for a user to move an arbitrary card from the discard
pile into their hand. This is needed for the "Wormhole" mechanic.

We already had this controller in place but it was broken. Fix it up and
link to it.

Add some JavaScript to hide the controls and make it such that clicking
on a card moves it (select the radio and submit the form). The non-JS
fallback will continue to work.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,12 +26,18 @@ en:
               not_installed: "is not installed on any player's board"
               not_in_deck: "is not in the deck"
 
+  discards:
+    show:
+      move_button: "Move into your hand"
   games:
     index:
       start: "Start a new game"
       join: "Join a game by number"
     new:
       start_button: "Start"
+    show:
+      inspect_discard: "Inspect"
+      move_button: "Move"
   joins:
     new:
       join_button: "Join"
